--- a/Papaly/app/src/main/res/layout/activity_mainasif.xml
+++ b/Papaly/app/src/main/res/layout/activity_mainasif.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".MainActivity">
+    tools:context=".Barath.AsifActivity">
 
 
 
@@ -39,7 +39,7 @@
 
                 <androidx.fragment.app.FragmentContainerView
                     android:id="@+id/fragmentContainerView"
-                    android:name="com.example.papaly.WaterTankAndTemp"
+                    android:name="com.example.papaly.Barath.WaterTankAndTemp"
                     android:layout_width="190dp"
 
                     android:layout_height="290dp"
@@ -394,7 +394,8 @@
                         android:background="@color/transparent"
                         android:foreground="@color/transparent"
 
-                        android:text="@string/timetriggerwaterlevel"
+                        android:clickable="true"
+
                         android:textColor="@color/waterTankLight"
                         android:textAlignment="center"
                         android:textSize="25sp"
